# thrift-parser

./: .gitignore  LICENSE  README.md  Thrift.g4  demo3.py  demo4.py  gen.sh  pyproject.toml  simple.py
.github/workflows/: gradle-publish.yml  gradle.yml  javascript.yml  python-package.yml  typescript.yml
fixtures/: AnnotationTest.thrift  ThriftTest.thrift  literal.thrift  tutorial.thrift
java/: build.gradle
javascript/: .gitignore  Thrift.interp  ThriftLexer.js  ThriftListener.js  ThriftParser.js  package-lock.json  package.json  tsconfig.json
javascript/src/: ThriftLexer.interp  ThriftLexer.js  ThriftListener.js  ThriftParser.js  index.d.ts  index.js
javascript/test/: index.spec.js
javascript/thrift-parser/: package.json
javascript/thrift-parser/src/: Thrift.interp  ThriftLexer.interp  ThriftListener.js  ThriftParser.js  index.js
javascript/thrift-parser/test/: index.spec.js
old/: demo2.py  demo3.py  simple.py
python/: pyproject.toml
python/tests/: test_parser.py
python/thrift_parser/: README.md  Thrift.g4  ThriftLexer.interp  ThriftLexer.py  ThriftListener.py  ThriftParser.py  parse.py
tests/: test_parser.py
thrift_parser/: Thrift.g4  Thrift.interp  ThriftLexer.interp  ThriftLexer.py  ThriftLexer.tokens  ThriftListener.py  ThriftParser.py  __init__.py  parse.py
tutorial/: ThriftTest.thrift  tutorial.thrift
typescript/: package-lock.json  package.json  tsconfig.json
typescript/src/: Thrift.interp  ThriftLexer.interp  ThriftLexer.ts  ThriftListener.ts  ThriftParser.ts  index.ts
typescript/test/: index.test.ts
(+12 files in other folders)
